fix(background): adjust page level containers relative positioning and set the same z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,10 +11,6 @@ html {
   scroll-behavior: smooth;
 }
 
-html, body, .background-sky {
-  height: 100%;
-}
-
 body {
   background-color: black;
   background-repeat: no-repeat;
